basic css, add picture and sections

--- a/index.html
+++ b/index.html
@@ -9,7 +9,37 @@
 <body>
     <header>
         <h1>English with Taty</h1>
+        <img src="./images/taty_stairs.webp" alt="">
     </header>
+    <section>
+        <h3>Projeto</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta velit sunt quas molestiae, 
+            at illum, sapiente repellat minus debitis neque deserunt? Veniam excepturi libero fuga hic! Hic alias dolor fuga.</p>
+    </section>
+    <section>
+        <h3>
+            Experiencia
+        </h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur excepturi enim ea animi vel voluptate.
+             Fugiat odio nihil ex molestiae magnam, voluptatem totam inventore eum maiores eos sit molestias atque.</p>
+    </section>
+    <section>
+        <h3>Materiais</h3>
+        <ul>
+            <li>Método</li>
+            <li>Método</li>
+            <li>Método</li>
+            <li>Método</li>
+        </ul>
+    </section>
+    <section >
+        <h3>Media</h3>
+        <ul id="media">
+            <li>Instagram</li>
+            <li>Facebook</li>
+            <li>Whatsapp</li>
+        </ul>
+    </section>
     <footer>
         &copy; 2024 English with Taty
     </footer>
