Enhancements of css display, add content

--- a/index.html
+++ b/index.html
@@ -4,40 +4,70 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>English with Taty</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <header>
-        <h1>English with Taty</h1>
-        <img src="./images/taty_stairs.webp" alt="">
+        <div class="container header">
+            <h1>English with Taty</h1>
+            <img src="./images/taty_stairs.webp" alt="">
+        </div>
+        <div class="container">
+            <nav>
+                <ul class="nav_list">
+                    <li class="nav_list__item"><a href="#projeto">Projeto</a></li>
+                    <li class="nav_list__item"><a href="#experiencia">Experiencia</a></li>
+                    <li class="nav_list__item"><a href="#grupos">Grupos</a></li>
+                    <li class="nav_list__item"><a href="#materiais">Materiais</a></li>
+                    <li class="nav_list__item"><a href="#social_media">Media</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    <section>
-        <h3>Projeto</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta velit sunt quas molestiae, 
-            at illum, sapiente repellat minus debitis neque deserunt? Veniam excepturi libero fuga hic! Hic alias dolor fuga.</p>
+    <section id="projeto">
+        <h3 class="subtittle">Projeto</h3>
+        <p>Tenho a certeza que os idiomas abrem as portas para maravilhosas possivilidades. Por isso eu quero ofrecer oportunidades a criancas e jóvens para estar melhor preparados para o futuro.
+            No mundo globalizado em que vivemos é preciso conhecer de outras culturas e conseguir se comunicar para obter sucesso nos nossos projetos. Minha vida mudou, tendo sido criada no interior do país 
+            mas com a bencao de poder conhecer outras culturas. Entendo o difícil que é iniciar de cero um idioma e por isso estou desenvolvendo uma manera lúdica de ensinar e preparar para o futuro.
+        </p>
     </section>
-    <section>
-        <h3>
+    <section id="experiencia">
+        <h3 class="subtittle">
             Experiencia
         </h3>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur excepturi enim ea animi vel voluptate.
-             Fugiat odio nihil ex molestiae magnam, voluptatem totam inventore eum maiores eos sit molestias atque.</p>
+        <p>Professora trilíngue, certificada TESOL (Ensino de ingles como lengua secundária) pela Universidade Brigham Young Idaho, dos Estados Unidos. 
+            Tenho experiência lecionando para todas as idades, a distância e presencial.
+            Morei no exterior em dois países com idiomas diferentes do meu nativo, o que me ajudou a entender as necessidades dos meus alunos. 
+            Implementei um método orgânico, com uma abordagem natural a uma nova linguagem o que os ajudou a manter o interesse, alcançando bons resultados.</p>
     </section>
-    <section>
-        <h3>Materiais</h3>
-        <ul>
-            <li>Método</li>
-            <li>Método</li>
-            <li>Método</li>
-            <li>Método</li>
+    <section id="grupos">
+        <h3 class="subtittle">Grupos</h3>
+        <div class="container">
+            <ul>
+                <li>Criancas 4-6 anos</li>
+                <li>Criancas 7-10</li>
+                <li>Jóvens 14-17 anos</li>
+            </ul>
+        </div>
+    </section>
+    <section id="materiais">
+        <h3 class="subtittle">Materiais</h3>
+        <ul class="materials">
+            <li><img src="http://via.placeholder.com/150x250" alt=""></li>
+            <li><img src="http://via.placeholder.com/150x250" alt=""></li>
+            <li><img src="http://via.placeholder.com/150x250" alt=""></li>
+            <li><img src="http://via.placeholder.com/150x250" alt=""></li>
         </ul>
     </section>
-    <section >
-        <h3>Media</h3>
+    <section id="social_media">
+        <h3 class="subtittle">Media</h3>
         <ul id="media">
-            <li>Instagram</li>
-            <li>Facebook</li>
-            <li>Whatsapp</li>
+            <li><a href="http://instagram.com/thelopezfamilyeternally"><img class="small_icons" src="./images/instagram.jpg" alt="Instagram"></a></li>
+            <li><a href="https://www.linkedin.com/in/tatyanesousa10/"><img class="small_icons" src="./images/LinkedIn-Symbole.webp" alt="Linkedin logo"></a></li>
+            <li><a href="http://wa.me/554197504912"><img src="./images/WhatsAppButtonGreenMedium.png" alt="Whats app button"></a></li>
         </ul>
     </section>
     <footer>
