--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h3 class="subtittle">
             Experiencia
         </h3>
-        <p>Professora trilíngue, certificada TESOL (Ensino de ingles como lengua secundária) pela Universidade Brigham Young Idaho, dos Estados Unidos. 
+        <p>Professora trilíngue, certificada TEFL (Ensino de ingles como lengua secundária) pela Universidade Brigham Young Idaho, dos Estados Unidos. 
             Tenho experiência lecionando para todas as idades, a distância e presencial.
             Morei no exterior em dois países com idiomas diferentes do meu nativo, o que me ajudou a entender as necessidades dos meus alunos. 
             Implementei um método orgânico, com uma abordagem natural a uma nova linguagem o que os ajudou a manter o interesse, alcançando bons resultados.</p>
@@ -46,17 +46,17 @@
     <section id="grupos">
         <h3 class="subtittle">Grupos</h3>
         <div class="container">
-            <ul>
-                <li>Criancas 4-6 anos</li>
-                <li>Criancas 7-10</li>
-                <li>Jóvens 14-17 anos</li>
+            <ul class="groups">
+                <li class="groups__item"><img src="./images/nursery.jpeg" alt="">Criancas 4-6</li>
+                <li class="groups__item"><img src="./images/kiddo.jpeg" alt="">Criancas 7-10</li>
+                <li class="groups__item"><img src="./images/youth.jpeg" alt="">Jóvens 14-17</li>
             </ul>
         </div>
     </section>
     <section id="materiais">
         <h3 class="subtittle">Materiais</h3>
         <ul class="materials">
-            <li><img src="http://via.placeholder.com/150x250" alt=""></li>
+            <li><img src="./images/colors.jpeg" alt=""></li>
             <li><img src="http://via.placeholder.com/150x250" alt=""></li>
             <li><img src="http://via.placeholder.com/150x250" alt=""></li>
             <li><img src="http://via.placeholder.com/150x250" alt=""></li>
@@ -67,7 +67,7 @@
         <ul id="media">
             <li><a href="http://instagram.com/thelopezfamilyeternally"><img class="small_icons" src="./images/instagram.jpg" alt="Instagram"></a></li>
             <li><a href="https://www.linkedin.com/in/tatyanesousa10/"><img class="small_icons" src="./images/LinkedIn-Symbole.webp" alt="Linkedin logo"></a></li>
-            <li><a href="http://wa.me/554197504912"><img src="./images/WhatsAppButtonGreenMedium.png" alt="Whats app button"></a></li>
+            <li><a href="http://wa.me/554197504912"><img src="./images/whatsappButton.png" alt="Whats app button"></a></li>
         </ul>
     </section>
     <footer>
