enhancement o conteudo projeto

--- a/index.html
+++ b/index.html
@@ -29,9 +29,12 @@
     </header>
     <section id="projeto">
         <h3 class="subtittle">Projeto</h3>
-        <p>Tenho a certeza que os idiomas abrem as portas para maravilhosas possivilidades. Por isso eu quero ofrecer oportunidades a criancas e jóvens para estar melhor preparados para o futuro.
-            No mundo globalizado em que vivemos é preciso conhecer de outras culturas e conseguir se comunicar para obter sucesso nos nossos projetos. Minha vida mudou, tendo sido criada no interior do país 
-            mas com a bencao de poder conhecer outras culturas. Entendo o difícil que é iniciar de cero um idioma e por isso estou desenvolvendo uma manera lúdica de ensinar e preparar para o futuro.
+        <p>Tenho a certeza que o aprendizado de um novo idioma pode abrir portas em várias areas. Aprender ingles é fundamental já que é a lingua máis utilizada como meio de comunicacao 
+            em diversos paí. <br>
+            Muitas criancas e jovens tem o desejo de aprender esse novo idioma, porém se deparam muitas vezes com um ensino tardio e precaário. Isso geralmente faz com que elas desenvolvam um sentimento de medo e de incapacidade para 
+            aprender uma nova lingua. Eu mesma já tive esse mesmo sentimento.
+            <br>Por isso estou iniciando este projeto de ensino de ingles para criancas e jovens a um preco acessivel. Onde elas poderao ter contato com o idioma ingles sem tanta pressao, 
+            podendo ter a oportunidade de aprender de uma maneira mais natural.
         </p>
     </section>
     <section id="experiencia">
