--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav>
                 <ul class="nav_list">
                     <li class="nav_list__item"><a href="#projeto">Projeto</a></li>
-                    <li class="nav_list__item"><a href="#experiencia">Experiencia</a></li>
+                    <li class="nav_list__item"><a href="#experiencia">Experiência</a></li>
                     <li class="nav_list__item"><a href="#grupos">Grupos</a></li>
                     <li class="nav_list__item"><a href="#materiais">Materiais</a></li>
                     <li class="nav_list__item"><a href="#social_media">Media</a></li>
@@ -29,30 +29,29 @@
     </header>
     <section id="projeto">
         <h3 class="subtittle">Projeto</h3>
-        <p>Tenho a certeza que o aprendizado de um novo idioma pode abrir portas em várias areas. Aprender ingles é fundamental já que é a lingua máis utilizada como meio de comunicacao 
-            em diversos paí. <br>
-            Muitas criancas e jovens tem o desejo de aprender esse novo idioma, porém se deparam muitas vezes com um ensino tardio e precaário. Isso geralmente faz com que elas desenvolvam um sentimento de medo e de incapacidade para 
-            aprender uma nova lingua. Eu mesma já tive esse mesmo sentimento.
-            <br>Por isso estou iniciando este projeto de ensino de ingles para criancas e jovens a um preco acessivel. Onde elas poderao ter contato com o idioma ingles sem tanta pressao, 
+        <p>Tenho a certeza de que o aprendizado de um novo idioma pode abrir portas em várias áreas. Aprender inglês é fundamental já que é a língua mais utilizada como meio de comunicação 
+            em diversos países. <br>
+            Muitas crianças e jovens têm o desejo de aprender esse novo idioma, porém se deparam muitas vezes com um ensino tardio e precário. Isso geralmente faz com que elas desenvolvam um sentimento de medo e de incapacidade para 
+            aprender uma nova língua. Eu mesma já tive esse mesmo sentimento!
+            <br>Por isso estou iniciando este projeto de ensino de inglês para crianças e jovens a um preço acessível, onde elas poderão ter contato com o idioma inglês sem tanta pressão, 
             podendo ter a oportunidade de aprender de uma maneira mais natural.
         </p>
     </section>
     <section id="experiencia">
         <h3 class="subtittle">
-            Experiencia
+            Experiência
         </h3>
-        <p>Professora trilíngue, certificada TEFL (Ensino de ingles como lengua secundária) pela Universidade Brigham Young Idaho, dos Estados Unidos. 
-            Tenho experiência lecionando para todas as idades, a distância e presencial.
-            Morei no exterior em dois países com idiomas diferentes do meu nativo, o que me ajudou a entender as necessidades dos meus alunos. 
-            Implementei um método orgânico, com uma abordagem natural a uma nova linguagem o que os ajudou a manter o interesse, alcançando bons resultados.</p>
+        <p>Professora trilíngue, certificado TEFL ( Professora de inglês como língua estrangeira) pela Brigham Young University, Idaho.
+            Tenho experiência ensinando idiomas para totas as idades, a distância e presencial.
+            Morei no exterior por muitos anos especificamente Estados Unidos e México, essa experiência me ajudou a entender melhor as necessidade dos meus alunos. Assim que implementei um método orgânico, com uma abordagem natural.</p>
     </section>
     <section id="grupos">
         <h3 class="subtittle">Grupos</h3>
         <div class="container">
             <ul class="groups">
-                <li class="groups__item"><img src="./images/nursery.jpeg" alt="">Criancas 4-6</li>
-                <li class="groups__item"><img src="./images/kiddo.jpeg" alt="">Criancas 7-10</li>
-                <li class="groups__item"><img src="./images/youth.jpeg" alt="">Jóvens 14-17</li>
+                <li class="groups__item"><img src="./images/nursery.jpeg" alt="">Crianças 4-6</li>
+                <li class="groups__item"><img src="./images/kiddo.jpeg" alt="">Crianças 7-10</li>
+                <li class="groups__item"><img src="./images/youth.jpeg" alt="">Jovens 14-17</li>
             </ul>
         </div>
     </section>
