Enhancement of pictures and content

--- a/index.html
+++ b/index.html
@@ -42,26 +42,26 @@
             Experiência
         </h3>
         <p>Professora trilíngue, certificado TEFL ( Professora de inglês como língua estrangeira) pela Brigham Young University, Idaho.
-            Tenho experiência ensinando idiomas para totas as idades, a distância e presencial.
+            Tenho experiência ensinando idiomas para todas as idades, a distância e presencial.
             Morei no exterior por muitos anos especificamente Estados Unidos e México, essa experiência me ajudou a entender melhor as necessidade dos meus alunos. Assim que implementei um método orgânico, com uma abordagem natural.</p>
     </section>
     <section id="grupos">
         <h3 class="subtittle">Grupos</h3>
         <div class="container">
             <ul class="groups">
-                <li class="groups__item"><img src="./images/nursery.jpeg" alt="">Crianças 4-6</li>
-                <li class="groups__item"><img src="./images/kiddo.jpeg" alt="">Crianças 7-10</li>
-                <li class="groups__item"><img src="./images/youth.jpeg" alt="">Jovens 14-17</li>
+                <li class="groups__item"><img src="./images/nursery.jpeg" alt="Nursery kids">Crianças 4-6</li>
+                <li class="groups__item"><img src="./images/kiddo.jpeg" alt="Kid learning English">Crianças 7-10</li>
+                <li class="groups__item"><img src="./images/youth.jpeg" alt="young student">Jovens 14-17</li>
             </ul>
         </div>
     </section>
     <section id="materiais">
         <h3 class="subtittle">Materiais</h3>
         <ul class="materials">
-            <li><img src="./images/colors.jpeg" alt=""></li>
-            <li><img src="http://via.placeholder.com/150x250" alt=""></li>
-            <li><img src="http://via.placeholder.com/150x250" alt=""></li>
-            <li><img src="http://via.placeholder.com/150x250" alt=""></li>
+            <li><img src="./images/colors.jpeg" alt="Colors and materials for painting"></li>
+            <li><img src="./images/eng_for_everyone.jpeg" alt="English for everyone book"></li>
+            <li><img src="./images/eng_for_everyone_workbook.jpeg" alt="English for everyone workbook"></li>
+            <li><img src="./images/eng_for_everyone.jpeg" alt="English for everyone book">
         </ul>
     </section>
     <section id="social_media">
